5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1674_1105.log
== TEST (2019-04-25 11:11:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("descricao do brasao: ").lower()
print(x)
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("descricao do brasao: ").lower()
print(x)
-- OUTPUT:
lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:19:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada:", x)
if (x == lobo):
	print("Casa: Stark")
elif(x==leao):
	print("Casa: Lannister")
elif(x==veado):
	print("Casa: Baratheon")
elif(x==dragao):
	print("Casa: Targaryen")
elif(x==rosa):
	print("Casa: Tyrell")
elif(x==sol):
	print("Casa: Martell")
elif(x==lula):
	print("Casa: Greyjoy")
elif(x==esfolado):
	print("Casa: Bolton")
elif(x==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.133933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1105/main.py", line 5, in <module>
    if (x == lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada:", x)
if (x == lobo):
	print("Casa: Stark")
elif(x==leao):
	print("Casa: Lannister")
elif(x==veado):
	print("Casa: Baratheon")
elif(x==dragao):
	print("Casa: Targaryen")
elif(x==rosa):
	print("Casa: Tyrell")
elif(x==sol):
	print("Casa: Martell")
elif(x==lula):
	print("Casa: Greyjoy")
elif(x==esfolado):
	print("Casa: Bolton")
elif(x==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ").lower()
print("Entrada:", x)
if (x == lobo):
	print("Casa: Stark")
elif(x==leao):
	print("Casa: Lannister")
elif(x==veado):
	print("Casa: Baratheon")
elif(x==dragao):
	print("Casa: Targaryen")
elif(x==rosa):
	print("Casa: Tyrell")
elif(x==sol):
	print("Casa: Martell")
elif(x==lula):
	print("Casa: Greyjoy")
elif(x==esfolado):
	print("Casa: Bolton")
elif(x==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ").lower()
print("Entrada:", x)
if (x == "lobo"):
	print("Casa: Stark")
elif(x==leao):
	print("Casa: Lannister")
elif(x==veado):
	print("Casa: Baratheon")
elif(x==dragao):
	print("Casa: Targaryen")
elif(x==rosa):
	print("Casa: Tyrell")
elif(x==sol):
	print("Casa: Martell")
elif(x==lula):
	print("Casa: Greyjoy")
elif(x==esfolado):
	print("Casa: Bolton")
elif(x==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(x==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:21:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ").lower()
print("Entrada:", x)
if (x == "lobo"):
	print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.171331
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
